Fixed some spacing problems

--- a/index.css
+++ b/index.css
@@ -88,7 +88,6 @@ html, body{
 }
 
 #downArrow2{
-	margin-top: 100px;
 	color: white;
 	font-size: 45px;
 }
@@ -98,7 +97,7 @@ html, body{
 }
 
 #downArrow3{
-	margin-top: 50px;
+
 	color: #588c7e;
 }
 
